[gd_scene load_steps=17 format=1]

[ext_resource path="res://weapon_chooser/weapon_chooser.gd" type="Script" id=1]
[ext_resource path="res://ui/dream_theme.tres" type="Theme" id=2]
[ext_resource path="res://ui/dream_theme/9x9_expand.png" type="Texture" id=3]
[ext_resource path="res://weapon_chooser/please_choose.png" type="Texture" id=4]
[ext_resource path="res://noise.tscn" type="PackedScene" id=5]
[ext_resource path="res://weapon_chooser/chooser_backing_track.ogg" type="AudioStream" id=6]
[ext_resource path="res://weapon_chooser/arrow.png" type="Texture" id=7]
[ext_resource path="res://weapon_chooser/arrow_p.png" type="Texture" id=8]
[ext_resource path="res://weapon_chooser/staff.png" type="Texture" id=9]
[ext_resource path="res://weapon_chooser/staff_p.png" type="Texture" id=10]
[ext_resource path="res://weapon_chooser/sword.png" type="Texture" id=11]
[ext_resource path="res://weapon_chooser/sword_p.png" type="Texture" id=12]
[ext_resource path="res://weapon_chooser/instructions.png" type="Texture" id=13]
[ext_resource path="res://camera.tscn" type="PackedScene" id=14]

[sub_resource type="Animation" id=1]

resource/name = "lead_in"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("StreamPlayer:stream/volume_db")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ -80.0, 0.0 ]
}

[sub_resource type="Animation" id=2]

resource/name = "lead_out"
length = 2.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.5, 0.0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 2 ),
"transitions": FloatArray( 1 ),
"values": [ {
"args": [  ],
"method": "on_lead_out_completed"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("StreamPlayer:stream/volume_db")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 2 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -62.78 ]
}

[node name="chooser" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 1 )

[node name="fullscreen" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 2 )
margin/left = 2.0
margin/top = 5.0
margin/right = 19.0
margin/bottom = 24.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 3 )
flat = false

[node name="title" type="Sprite" parent="."]

transform/pos = Vector2( 160, 68 )
texture = ExtResource( 4 )

[node name="noise" parent="." instance=ExtResource( 5 )]

transform/pos = Vector2( 0, 0 )
z/relative = false
centered = false

[node name="StreamPlayer" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 6 )
stream/play = false
stream/loop = true
stream/volume_db = 0.0
stream/autoplay = true
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="anim" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/lead_in = SubResource( 1 )
anims/lead_out = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "lead_in"

[node name="arrow" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 208.0
margin/top = 103.0
margin/right = 240.0
margin/bottom = 135.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 7 )
textures/pressed = ExtResource( 8 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="staff" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 144.0
margin/top = 103.0
margin/right = 176.0
margin/bottom = 135.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 9 )
textures/pressed = ExtResource( 10 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="sword" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 80.0
margin/top = 103.0
margin/right = 112.0
margin/bottom = 135.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 11 )
textures/pressed = ExtResource( 12 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="instructions" type="Sprite" parent="."]

transform/pos = Vector2( 161, 167.5 )
texture = ExtResource( 13 )

[node name="camera" parent="." instance=ExtResource( 14 )]

[connection signal="pressed" from="fullscreen" to="." method="_on_fullscreen_pressed"]

[connection signal="pressed" from="arrow" to="." method="_on_arrow_pressed"]

[connection signal="pressed" from="staff" to="." method="_on_staff_pressed"]

[connection signal="pressed" from="sword" to="." method="_on_sword_pressed"]


